# GeneralTermOfFibonacciSequence

./: fib.py  pyproject.toml
